--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,19 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: #080b11;
+  color: #ffffff;
+}
+
+.mainContainer {
+  background: linear-gradient(
+    180deg,
+    rgba(114, 255, 128, 0.1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
 }
 
 a {
@@ -19,10 +32,30 @@ a {
   text-decoration: none;
 }
 
+/* Antd Table Custom CSS */
+
+.ant-table,
+.ant-list-bordered {
+  background: #0d151c !important;
+  border: 1px solid #2e3a35 !important;
+  box-shadow: 0px 12px 120px rgba(143, 255, 175, 0.08) !important;
+  border-radius: 12px !important;
+  color: #f2f2f2 !important;
+}
+
+.ant-table-thead > tr > th {
+  border-bottom: 1px solid #42444a !important;
+}
+
 .ant-table-thead > tr > th,
 .ant-table-tbody > tr > td {
   background: none !important;
-  padding: 12px 0px !important;
+  /* padding: 12px 0px !important; */
+  text-align: right !important;
+}
+
+.ant-table-tbody > tr > td {
+  padding: 8px 16px !important;
 }
 
 .ant-table-thead
@@ -31,4 +64,13 @@ a {
     .ant-table-row-expand-icon-cell
   ):not([colspan])::before {
   content: none !important;
+}
+
+.ant-list-header {
+  border-block-end: 1px solid #42444a !important;
+  padding: 16px 52px !important;
+}
+
+.ant-list-items {
+  padding: 16px 52px 32px !important;
 }
