--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,13 @@ a {
 .ant-list-items {
   padding: 16px 52px 32px !important;
 }
+
+.ant-card {
+  background: #090c12 !important;
+  border: 1px solid rgba(93, 103, 133, 0.14) !important;
+  border-radius: 13.62px !important;
+}
+
+.ant-card-body {
+  padding: 7px 11px !important;
+}
